# django-openflights

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: publish.yml  tests.yml
docs/: configuration.md  examples.md  importing-data.md  index.md  installation.md  models.md  writing-plugins.md
openflights/: __init__.py  admin.py  apps.py  conf.py  exceptions.py  models.py  util.py
openflights/importer/: __init__.py  airline.py  airport.py  base.py  plane.py
openflights/management/commands/: openflights.py
openflights/migrations/: 0001_initial.py
openflights/plugin/: __init__.py
openflights/services/: __init__.py  downloader.py  parser.py  validator.py
