[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-openflights"
version = "0.1.0"
description = "Django app for importing and managing OpenFlights data (airports, airlines, routes)"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Arthur Hanson", email = "worldnomad@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["django", "gis", "airports", "airlines", "routes", "openflights", "aviation"]
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/arthanson/django-openflights"
Documentation = "https://github.com/arthanson/django-openflights#readme"
Repository = "https://github.com/arthanson/django-openflights"
Issues = "https://github.com/arthanson/django-openflights/issues"

[tool.setuptools.packages.find]
include = ["openflights*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
